--- a/procfile
+++ b/procfile
@@ -1,2 +1,3 @@
-web: python server.py
-worker: python scheduler.py helloworld.txt
+web: python scheduler.py helloworld.txt
+
+worker python scheduler.py helloworld.txt
