--- a/procfile
+++ b/procfile
@@ -1,3 +1,3 @@
-web: python scheduler.py helloworld.txt
+worker: python scheduler.py helloworld.txt
 
-worker python scheduler.py helloworld.txt
+web: python server.py
