--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
     "engines": {
       "node": "14.x",
       "npm": "6.x"
-    }
+    },
+    "main": "server.py",
+"scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node server.py"
   }
+}
